--- a/ lambda-parser/Test_Zhucai.LambdaParser/Test_Zhucai.LambdaParser.csproj
+++ b/ lambda-parser/Test_Zhucai.LambdaParser/Test_Zhucai.LambdaParser.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
