--- a/trunk/ lambda-parser/Zhucai.LambdaParser/Zhucai.LambdaParser.csproj
+++ b/trunk/ lambda-parser/Zhucai.LambdaParser/Zhucai.LambdaParser.csproj
@@ -50,7 +50,7 @@
     <Compile Include="CodeParser.cs" />
     <Compile Include="ExpressionParser.cs" />
     <Compile Include="ExpressionParserCore.cs" />
-    <Compile Include="FastReflection.cs" />
+    <Compile Include="FastEvalExtension.cs" />
     <Compile Include="ParseException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
