--- a/ lambda-parser/Zhucai.LambdaParser/Zhucai.LambdaParser.csproj
+++ b/ lambda-parser/Zhucai.LambdaParser/Zhucai.LambdaParser.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="author.txt" />
+    <Content Include="遗留项.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
