--- a/trunk/ lambda-parser/Zhucai.LambdaParser/Zhucai.LambdaParser.csproj
+++ b/trunk/ lambda-parser/Zhucai.LambdaParser/Zhucai.LambdaParser.csproj
@@ -35,11 +35,14 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeParser.cs" />
     <Compile Include="ExpressionParser.cs" />
     <Compile Include="ExpressionParserCore.cs" />
+    <Compile Include="ObjectDynamicExtension.cs" />
     <Compile Include="ParseException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
