--- a/trunk/ lambda-parser/Zhucai.LambdaParser/Zhucai.LambdaParser.csproj
+++ b/trunk/ lambda-parser/Zhucai.LambdaParser/Zhucai.LambdaParser.csproj
@@ -50,6 +50,9 @@
     <Content Include="author.txt" />
     <Content Include="遗留项.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
